--- a/src/index.css
+++ b/src/index.css
@@ -22,9 +22,26 @@ code {
 
 .Moms{
   font-family: Moms;
-  font-size: 40px;
+  font-size: 50px;
 }
 .StartGameDiv{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
   margin-top: 300px;
-  margin-left: 40%;
+  align-items: center;
+}
+.SGinput{
+  width: 200px;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 20px;
+}
+.SGbtn{
+  margin-top: 40px;
+  margin-left: 23%;
+  background-color: red;
+  border-radius: 20px;
+  width: 100px;
+  padding: 4px;
 }
