--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,22 @@ code {
   width: 100px;
   padding: 4px;
 }
+
+.GameBoard{
+  background-color: rgb(128, 97, 88);
+  width: 100%;
+  height: 500px;
+  border-radius: 10px;
+}
+
+.Map-places{
+  position: absolute;
+  text-align: center;
+  background-color: blue;
+  width: 80px;
+  height: 50px;
+  border-radius: 50%;
+  margin-top: 200px;
+  padding-top: 30px;
+  font-size: x-small;
+}
