--- a/src/index.css
+++ b/src/index.css
@@ -106,4 +106,8 @@ code {
   margin-top: 2%;
   z-index: 0;
   opacity: 1;
+  background-color: rgba(19, 19, 19, 0.726);
+  padding: 10px;
+  border: none;
+  border-radius: 20px;
 }
