--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ code {
 }
 
 .GameBoard{
-  background-color: rgb(128, 97, 88);
+  background-color: rgb(75, 75, 75);
   width: 80%;
   margin-left: 50px;
   height: 88vh;
@@ -57,37 +57,55 @@ code {
 .Map-places{
   position: absolute;
   text-align: center;
-  background-color: blue;
-  width: 100px;
+  background-color: rgb(117, 87, 141);
+  width: 110px;
   height: 70px;
   border-radius: 50%;
-  padding-top: 30px;
-  font-size: x-small;
+  padding-top: 40px;
   margin-top: 200px;
   cursor: pointer;
 }
 .Start{
   position: fixed;
+  font-size: 20px;
+  font-weight: 800;
+  color: black;
   bottom: 5%;
   right: 56%;
 }
 .P1A1{
   position: fixed;
+  background-color: rgb(224, 222, 81);
+  font-size: 20px;
+  font-weight: 800;
+  color: black;
   bottom: 22%;
   right: 56%;
 }
 .P1A2{
   position: fixed;
+  background-color: rgb(224, 81, 81);
+  font-size: 20px;
+  font-weight: 800;
+  color: black;
   bottom: 38%;
   right: 56%;
 }
 .P1A3{
   position: fixed;
+  background-color: rgb(81, 224, 224);
+  font-size: 20px;
+  font-weight: 800;
+  color: black;
   bottom: 53%;
   right: 56%;
 }
 .P1A4{
   position: fixed;
+  background-color: rgb(81, 224, 105);
+  font-size: 20px;
+  font-weight: 800;
+  color: black;
   bottom: 68%;
   right: 56%;
 }
