--- a/src/index.css
+++ b/src/index.css
@@ -142,3 +142,26 @@ code {
 h1{
   text-align: center;
 }
+.A1ChestDiv{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.Chest-img{
+  width: 200px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 30%;
+}
+.return-btn{
+  position: absolute;
+  width: 160px;
+  font-size: 20px;
+  font-weight: 700;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 6px;
+  bottom: 20%;
+}
