--- a/src/index.css
+++ b/src/index.css
@@ -165,3 +165,20 @@ h1{
   padding: 6px;
   bottom: 20%;
 }
+.PLayerCombatMovesDiv{
+  position: absolute;
+  bottom: 0;
+  height: 30%;
+  width: 98%;
+  display: grid;
+  grid-template-columns: auto auto;
+  background-color: #1f415f;
+  padding-top: 10px;
+  gap: 10px;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-bottom: 10px;
+}
+.CombatMoves{
+ background-color: rgba(73, 156, 211, 0.548);
+}
