--- a/src/index.css
+++ b/src/index.css
@@ -165,7 +165,7 @@ h1{
   padding: 6px;
   bottom: 20%;
 }
-.PLayerCombatMovesDiv{
+.PlayerCombatMovesDiv{
   position: absolute;
   bottom: 0;
   height: 30%;
