--- a/src/index.css
+++ b/src/index.css
@@ -182,3 +182,12 @@ h1{
 .CombatMoves{
  background-color: rgba(73, 156, 211, 0.548);
 }
+.EnemyStats{
+  background-color: rgba(0, 0, 0, 0.322);
+  position: absolute;
+  right: 0%;
+  padding: 20px;
+  font-size: 22px;
+  border-radius: 10px;
+  bottom: 42%;
+}
