--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@ code {
   z-index: 100;
   opacity: 1;
   background-color: rgba(19, 19, 19, 0.726);
-  padding: 10px;
+  padding: 5px;
   border: none;
   border-radius: 20px;
 }
@@ -184,6 +184,7 @@ h1{
  display: flex;
  flex-direction: column;
  align-items: center;
+ cursor: pointer;
 }
 .EnemyStats{
   background-color: rgba(0, 0, 0, 0.322);
