--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,7 @@ code {
   background-color: black;
   border: solid white;
   margin-left: 4%;
+  cursor: pointer;
 }
 .Inv-data{
   position: fixed;
@@ -262,5 +263,28 @@ h1{
   border: solid black 3px;
   border-radius: 20px;
   color: black;
+  cursor: pointer;
+}
+.Lvl-up-main-div{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+.C-div{
+  position: absolute;
+  left: 1%;
+  top: 2%;
+}
+.Return-BTN{
+  color: white;
+  background-color: rgba(0, 0, 0, 0.911);
+  border: none;
+  padding: 20px 60px;
+  border-radius: 30px;
+  margin-top: 100px;
+}
+.Return-BTN:hover{
+  background-color: rgb(126, 109, 35);
   cursor: pointer;
 }
