--- a/src/index.css
+++ b/src/index.css
@@ -288,3 +288,33 @@ h1{
   background-color: rgb(126, 109, 35);
   cursor: pointer;
 }
+.Main-A1-Encounter-Div{
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+}
+.eye,
+.eye2{
+  color: white;
+  width: 100px;
+  position: absolute;
+  top: 10%;
+  left: 40%;
+}
+.eye2{
+  left: 50%;
+}
+.mouth{
+  color: white;
+  position: absolute;
+  width: 250px;
+  top: 16%;
+  left: 39%;
+}
+.coin{
+  color: white;
+  position: absolute;
+  width: 100px;
+  top: 75%;
+  left: 44%;
+}
