made fight without alerts and now shows dps numbers

--- a/src/index.css
+++ b/src/index.css
@@ -220,6 +220,8 @@ h1{
   position: absolute;
   top: 10px;
   right: 0%;
+  opacity: .4;
+  font-size: 16px;
 }
 
 .healthBar,
@@ -372,6 +374,13 @@ h1{
 }
 .Main-gob-div{
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.dps-div{
+  width: 100%;
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
