--- a/src/index.css
+++ b/src/index.css
@@ -385,3 +385,18 @@ h1{
   flex-direction: column;
   align-items: center;
 }
+.Main-Town-Div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: #77c979;
+}
+.ROAD{
+  background-color: rgb(71, 67, 67);
+  height: 90vh;
+  width: 400px;
+  border: 1px black;
+  border-end-end-radius: 50px;
+  border-end-start-radius: 50px;
+}
