--- a/src/index.css
+++ b/src/index.css
@@ -452,3 +452,16 @@ h1{
   border-top-right-radius: 350px;
   border: black solid 2px;
 }
+.Hover-Descriptions{
+  background-color: rgba(0, 0, 0, 0.63);
+  display: Flex;
+  flex-direction: column;
+  position: fixed;
+  width: 100%;
+  align-items: center;
+}
+.Town-Bars{
+  position: absolute;
+  bottom: 26%;
+  right: 0%;
+}
