--- a/src/index.css
+++ b/src/index.css
@@ -478,7 +478,7 @@ h1{
   opacity: 1;
 }
 .Inn-main-div{
-  background-color: rgb(41, 22, 5);
+  background-color: rgb(133, 131, 131);
   color: white;
   display: flex;
   flex-direction: column;
@@ -491,4 +491,14 @@ h1{
   bottom: 0%;
   width: 100%;
   height: 140%;
+}
+.Item-div{
+  display: grid;
+  grid: 100px / auto auto auto;
+  position: absolute;
+  bottom: 30px;
+  width: 100%;
+}
+.Items{
+  font-size: ;
 }
