made inventory look better cannot stack items in inventory

--- a/src/index.css
+++ b/src/index.css
@@ -477,7 +477,7 @@ h1{
   width: 100%;
   opacity: 1;
 }
-.Inn-main-div{
+.Armor-main-div{
   background-color: rgb(133, 131, 131);
   color: white;
   display: flex;
