--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,51 @@ code {
   width: 100%;
   height: 98vh;
 }
-
+.Swamp-water{
+  background-color: #54aaa6;
+  height: 600px;
+  width: 25%;
+  position: fixed;
+  left: 0;
+  bottom: 0%;
+  border-radius: 10px;
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border: solid 5px  #305250;
+  opacity: .6;
+}
+.Swamp-water2{
+  background-color: #54aaa6;
+  height: 500px;
+  width: 25%;
+  position: fixed;
+  right: 0;
+  bottom: 0%;
+  border-radius: 10px;
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+  border: solid 5px  #305250;
+  opacity: .4;
+}
+.swamp-p{
+  position: fixed;
+  left: 20px;
+  bottom: 25%;
+  font-size: 30px;
+}
+.swamp-p2{
+  position: fixed;
+  right: 20px;
+  bottom: 25%;
+  font-size: 30px;
+}
+.map-Path{
+  background-color: rgb(75, 104, 72);
+  width: 30%;
+  height: 88vh;
+  border-radius: 20%;
+  border: rgb(60, 85, 58) solid 10px;
+}
 .GameBoard{
   background-color: rgb(53, 73, 51);
   width: 100%;
@@ -91,7 +135,7 @@ code {
   font-size: 20px;
   font-weight: 800;
   color: black;
-  left: 26%;
+  left: 36%;
   bottom: 15%;
 }
 .P1A2{
@@ -101,7 +145,7 @@ code {
   font-weight: 800;
   color: black;
   right: 39%;
-  bottom: 28%;
+  bottom: 30%;
 }
 .P1A3{
   position: absolute;
@@ -161,7 +205,7 @@ code {
 .here2{
   position: fixed;
   bottom: 18%;
-  left: 7%;
+  left: 20%;
 }
 .here3{
   position: fixed;
@@ -177,7 +221,7 @@ code {
   position: fixed;
   width: 80px;
   bottom: 17%;
-  left: 17%;
+  left: 27%;
   rotate: 90deg;
 }
 .Arrow3{
@@ -276,7 +320,6 @@ h1{
   right: 0%;
   opacity: .4;
   font-size: 16px;
-  z-index: -1;
 }
 
 .healthBar,
