--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,12 @@ code {
   height: 100vh;
   position: absolute;
 }
+.Cave-Map-main-div{
+  background: linear-gradient(to top, #4e4e4e, #000000);
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+}
 .Act2-GameBoard{
   background-color: rgb(8, 56, 4);
   width: 100%;
@@ -91,6 +97,32 @@ code {
   border-bottom-left-radius: 10%;
   border: solid 5px  #0b4e09;
   opacity: .5;
+}
+.stone{
+  background-color: #080808;
+  height: 100%;
+  width: 30%;
+  position: fixed;
+  left: 0;
+  bottom: 0%;
+  border-radius: 10px;
+  border-top-right-radius: -10%;
+  border-bottom-right-radius: 30%;
+  border: solid 5px  #000000;
+  opacity: .8;
+}
+.stone2{
+  background-color: #000000;
+  height: 100%;
+  width: 30%;
+  position: fixed;
+  right: 0;
+  bottom: 0%;
+  border-radius: 10px;
+  border-top-left-radius: -10%;
+  border-bottom-left-radius: 30%;
+  border: solid 5px  #000000;
+  opacity: .8;
 }
 .Swamp-water{
   background-color: #54aaa6;
