--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,7 @@ code {
 }
 .Swamp-water{
   background-color: #54aaa6;
-  height: 600px;
+  height: 80%;
   width: 25%;
   position: fixed;
   left: 0;
@@ -139,7 +139,7 @@ code {
 }
 .Swamp-water2{
   background-color: #54aaa6;
-  height: 500px;
+  height: 85%;
   width: 25%;
   position: fixed;
   right: 0;
