--- a/src/index.css
+++ b/src/index.css
@@ -861,3 +861,15 @@ h1{
   position: absolute;
   z-index: 1;
 }
+.YouDiedScreen{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+}
+.deathdata{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
