--- a/src/index.css
+++ b/src/index.css
@@ -909,3 +909,24 @@ h1{
   flex-direction: column;
   align-items: center;
 }
+.A1-Final-Div{
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(14, 13, 13);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.final-fight:hover{
+  color: red;
+  cursor: pointer;
+}
+.h1-top-final{
+  font-size: 40px;
+  align-self: center;
+}
+.final-fight{
+  position: absolute;
+  bottom: 0;
+  font-size: 70px;
+}
