--- a/src/index.css
+++ b/src/index.css
@@ -437,6 +437,17 @@ h1{
 .Tutorial-btn:hover{
   background-color: rgba(121, 228, 205, 0.925);
 }
+.MainTut-div{
+  background-color: #030303e1;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 18px;
+  z-index: 180481084;
+  padding: 2%;
+  top: 0%;
+}
 .EnemyStats{
   background-color: rgba(0, 0, 0, 0.322);
   position: absolute;
